# omero-cli-transfer

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py  test.xml
.github/workflows/: omero_plugin.yml  upload_to_pypi.yml  upload_to_test_pypi.yml
.omero/: .env  README.md  app-build  app-config  app-docker  cli-build  cli-docker  compose  docker  docker-compose.yml  download.sh  lib-build  lib-docker  lib-test  persist.sh  py-check  py-common  py-setup  requirements.txt  scripts-build  scripts-copy  scripts-docker  srv-compose.yml  srv-test  utils  volumes.yml  wait-on-login
.omero/omeroserver/: Dockerfile
.omero/omeroweb/: Dockerfile
.omeroci/: cli-build  py-setup
schemas/: preparemetadata.xsd  provenancemetadata.xsd  renderingsettings.xsd  serverpath.xsd
src/: generate_omero_objects.py  generate_xml.py  omero_cli_transfer.py
src/omero/plugins/: transfer.py
src/test/integration/: cli.py
test/: conftest.py
test/data/: transfer.xml  valid_single_image.tar
test/data/prepare/: filelist.txt  transfer.xml
test/data/valid_single_image/: transfer.xml
test/data/valid_single_image/root_0/2022-08/26/14-59-42.116/: combined_result.tiff
test/integration/: cli.py  test_figure.py  test_prepare.py  test_transfer.py
test/unit/: test_set.py
