[build-system]
requires = ["setuptools>=41", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"


[tool.setuptools-git-versioning]
enabled = true

[project]

name = "omero-cli-transfer"
dynamic = ["version"]
maintainers = [
    {name = "Erick Ratamero", email = "erick.ratamero@embl.de"}
    ]
description = "A set of utilities for exporting a transfer packet from an OMERO server and importing it in a different server."
readme = "README.md"
license = "GPL-2.0"
dependencies = [
    "ezomero>=3.1.0, <4.0.0",
    "ome-types>=0.6.1, <0.7.0"
    ]
requires-python = ">=3.9"

[project.optional-dependencies]
rocrate = ["rocrate>=0.7.0, <1.0.0"]

[project.urls]
Repository = "https://github.com/TheJacksonLaboratory/omero-cli-transfer"
